--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
-    background-color: aliceblue;
+    background-color: rgb(179, 193, 206);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+footer p {
+    text-align: center;
+    font-size: 1rem;
 }
