--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
 body {
     background-color: rgb(179, 193, 206);
+    font-family: Bai Jamjuree;
 }
+
+#container{
+   display: flex;
+}
+
+.cartao{
+    margin: 1rem 1rem;
+    background-color: white;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
+
+.cartao__conteudo {
+    text-align: center;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
 
 footer {
     background-color: black;
@@ -8,10 +35,12 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 2rem;
 }
 
 
 footer p {
     text-align: center;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    margin-top: 0.5;
 }
